# kdtree

./: .gitignore  README.md
cmake/: CMakeLists.txt
docs/: design.docx
msvc/: gtest-md.vcxproj  gtest_prod_test-md.vcxproj
msvs/: kdtree.props  kdtree.sln  output_to_bin.props
msvs/kdtbenchmark/: kdtbenchmark.vcxproj  kdtbenchmark.vcxproj.filters
msvs/kdtpointsgenerator/: kdtpointsgenerator.vcxproj  kdtpointsgenerator.vcxproj.filters
msvs/kdtree/: kdtree.vcxproj  kdtree.vcxproj.filters
msvs/kdtreebuilder/: kdtreebuilder.vcxproj  kdtreebuilder.vcxproj.filters
msvs/kdtreequery/: kdtreequery.vcxproj  kdtreequery.vcxproj.filters
src/: kdt_kdtree.cpp  kdt_kdtree.h  kdt_limitedpriorityqueue.h  kdt_point.h  kdtbenchmark.cpp  kdtree.h  main_kdtbenchmark.cpp  main_kdtpointsgenerator.cpp  main_kdtreebuilder.cpp  main_kdtreequery.cpp
tests/: kdt_limitedpriorityqueue.t.cpp  kdtree.t.cpp
