cmake_minimum_required(VERSION 2.8.9)
project (kdtree)
include_directories(../src)
ADD_DEFINITIONS(-std=c++11)
add_executable(kdtreebuilder ../src/main_kdtreebuilder.cpp)
add_executable(kdtreequery ../src/main_kdtreequery.cpp)
add_executable(kdtpointsgenerator ../src/main_kdtpointsgenerator.cpp)
add_executable(kdtbenchmark ../src/main_kdtbenchmark.cpp)
